sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:13: error: '(' expected but identifier found.
      if plusPetit(i+ecart, i) {
         ^AlgCombSort:18: error: illegal start of simple expression
    }
    ^